tests/js/valid/record/parses/type-5.buri
A = {-- hello
--hello
foo--hello
:--hello
Str--hello
,--hello
bar--hello
:--hello
[Int]--hello
-- I'm another comment
}