tests/js/invalid/list/mismatched-type-3.buri
words: [{ name: Str }] = [{ age: 21 }]